Criando a página Sobre

--- a/sobre.html
+++ b/sobre.html
@@ -40,31 +40,8 @@
 	</div>
 
 	<main>
-		<h1>Novas Receitas</h1>
+		<h1>Sobre o Churrasquito</h1>
 
-		<div class="receita">
-			<img src="assets/imgs/foto1.jpg" alt="Costelinha">
-			<p>
-				<strong>Costelinha Suina ao Molho Barbie Kill</strong>
-			</p>
-			<p>
-				<a href="costelinha.html" title="Costelinha" class="btn">
-					Ver Receita
-				</a>
-			</p>
-		</div>
-
-		<div class="receita">
-			<img src="assets/imgs/foto2.jpg" alt="Espetinho de Gato">
-			<p>
-				<strong>Espetinho de Gato</strong>
-			</p>
-			<p>
-				<a href="espetinho.html" title="Espetinho de Gato" class="btn">
-					Ver Receita
-				</a>
-			</p>
-		</div>
 	</main>
 
 	<footer>
