Criada a pagina Costelinha e também CSS print

--- a/costelinha.html
+++ b/costelinha.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/tablet.css" media="(max-width:600px)">
 	<link rel="stylesheet" type="text/css" href="assets/css/mobile.css" media="(max-width:480px)">
 	<link rel="stylesheet" type="text/css" href="assets/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/print.css" media="print">
 
 	<script type="text/javascript" src="assets/js/jquery-1.12.1.min.js"></script>
 	<script type="text/javascript" src="assets/js/jquery.cycle2.min.js"></script>
@@ -41,56 +42,29 @@
 	</div>
 
 	<main>
-		<h1>Receitas</h1>
-		
+		<h1>Costelinha Suina ao Molho Barbie Kill</h1>
 		<div class="receita">
 			<img src="assets/imgs/foto1.jpg" alt="Costelinha">
 			<p>
-				<strong>Costelinha Suina ao Molho Barbie Kill</strong>
-			</p>
-			<p>
-				<a href="costelinha.html" title="Costelinha" class="btn">
-					<i class="fa fa-search"></i> Ver Receita
-				</a>
+				<a href="javascript:window.print()" title="Imprimir" class="btn"><i class="fa fa-print"></i> Imprimir</a>
 			</p>
 		</div>
-
-		<div class="receita">
-			<img src="assets/imgs/foto2.jpg" alt="Espetinho de Gato">
-			<p>
-				<strong>Espetinho de Gato</strong>
-			</p>
-			<p>
-				<a href="espetinho.html" title="Espetinho de Gato" class="btn">
-					<i class="fa fa-search"></i> Ver Receita
-				</a>
-			</p>
+		<div class="descricao">
+			<h2>Receita</h2>
+			<p><strong>Ingredientes:</strong></p>
+			<ul>
+				<li>1 kg de Costelinha Suína</li>
+				<li>Sal</li>
+				<li>Pimenta do Reino</li>
+				<li>Alho</li>
+				<li>Suco de 1 limão</li>
+				<li>Molho Barbecue</li>
+			</ul>
+			<p><strong>Modo de Preparo:</strong></p>
+			<p>Tempere a costela com sal, alho e pimenta a gosto. Jogue o suco de limão e deixe descansar por 2 horas. Aqueça a churrasqueira, quando estiver quente coloque a costelinha em uma grelha ou no espeto. Vire assando cada lado até ficar dourado. Aplique o molho barbecue.</p>
 		</div>
 		<div class="clear"></div>
-		<div class="receita">
-			<img src="assets/imgs/foto3.jpg" alt="Molho Especial de Churrasco">
-			<p>
-				<strong>Molho Especial de Churrasco</strong>
-			</p>
-			<p>
-				<a href="molho-churrasco.html" title="Molho Especial de Churrasco" class="btn">
-					<i class="fa fa-search"></i> Ver Receita
-				</a>
-			</p>
-		</div>
-
-		<div class="receita">
-			<img src="assets/imgs/foto4.jpg" alt="Cebola do Autibéqui">
-			<p>
-				<strong>Cebola do Autibéqui</strong>
-			</p>
-			<p>
-				<a href="cebola-autibequi.html" title="Cebola do Autibéqui" class="btn">
-					<i class="fa fa-search"></i> Ver Receita
-				</a>
-			</p>
-		</div>
-		
+		<p class="escondido">Receita retirada do site www.churrasquito.com.br</p>
 	</main>
 
 	<footer>
