--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			</p>
 			<p>
 				<a href="costelinha.html" title="Costelinha" class="btn">
-					Ver Receita
+					<i class="fa fa-search"></i> Ver Receita
 				</a>
 			</p>
 		</div>
@@ -61,7 +61,7 @@
 			</p>
 			<p>
 				<a href="espetinho.html" title="Espetinho de Gato" class="btn">
-					Ver Receita
+					<i class="fa fa-search"></i> Ver Receita
 				</a>
 			</p>
 		</div>
