Colocado o icon das paginas

--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width">
 	<title>Churrasquito</title>
-
+	<link rel="shortcut icon" href="assets/imgs/icone.png">
 	<link href='https://fonts.googleapis.com/css?family=Rokkitt' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/tablet.css" media="(max-width:600px)">
@@ -50,7 +50,7 @@
 			<br>
 			<label for="email">Seu E-mail:</label>
 			<br>
-			<input type="text" name="email" id="email" class="box" placeholder="Digite seu e-mail completo" required>
+			<input type="email" name="email" id="email" class="box" placeholder="Digite seu e-mail" required>
 			<br>
 			<label for="mensagem">Mensagem</label>
 			<br>
